--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "author": "Joey Woolever",
   "license": "MIT",
   "devDependencies": {
-    "nodemon": "^2.0.14"
+    "nodemon": "^2.0.14",
+    "prettier": "^2.4.1",
+    "prettier-plugin-svelte": "^2.4.0"
   }
 }
